--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,9 @@
   "build": {
     "env": {
       "NODE_VERSION": "20"
-    }
+    },
+    "rewrites": [
+      { "source": "/((?!api|.*\\..*).*)", "destination": "/" }
+    ]
   }
 }
