--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,10 @@
 {
+  "version": 2,
   "functions": {
-    "api/**/*.ts": {
-      "memory": 1024,
-      "maxDuration": 60
-    }
+    "api/**/*.ts": { "memory": 1024, "maxDuration": 60 }
   },
-  "build": {
-    "env": {
-      "NODE_VERSION": "20"
-    },
-    "rewrites": [
-      { "source": "/((?!api|.*\\..*).*)", "destination": "/" }
-    ]
-  }
+  "env": { "NODE_VERSION": "20" },
+  "rewrites": [
+    { "source": "/((?!api|.*\\..*).*)", "destination": "/" }
+  ]
 }
